# myblog

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test.db
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py  database_provider.py  db.py  deps.py  error_codes.py  exceptions.py  extension_loader.py  hook_bus.py  logging_config.py  rate_limiter.py
app/extensions/: sample_extension.py
app/models/: __init__.py  category.py  post.py  site_settings.py  tag.py  user.py
app/routes/: admin_auth.py  admin_posts.py  admin_taxonomy.py  api_v1_admin_posts.py  api_v1_admin_taxonomy.py  api_v1_auth.py  api_v1_author.py  api_v1_media.py  api_v1_posts.py  (+5 more)
docs/: README.md  api-v1-contract.md  extension-api-v1.md  implementation-alignment-remediation-checklist.md  v1-scope.md
frontend/: .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
migrations/: env.py
nginx/: nginx.conf
scripts/: clear_database.py  create_admin.py  docker_entrypoint.py  run_dev.py  start_blog.py  start_fullstack.py  verify_phase12.py
tests/: conftest.py  test_admin_auth.py  test_admin_posts.py  test_admin_taxonomy.py  test_api_v1_auth.py  test_api_v1_author.py  test_api_v1_posts.py  test_config.py  test_database_bootstrap_service.py  test_database_provider.py  test_database_state_service.py  test_e2e_smoke.py  test_extension_loader.py  test_feed.py  test_fixtures.py  test_health.py  test_hook_bus.py  test_models.py  test_philosophy_guardrails.py  test_post_service.py  test_public_pages.py  test_run_dev_script.py  test_setup_service.py  test_start_blog_script.py  test_start_fullstack_script.py  test_taxonomy_service.py  test_verify_phase12_script.py
(+171 files in other folders)
