[project]
name = "myblog"
version = "1.0.0"
description = "轻量、克制、可扩展的个人博客系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "pypinyin>=0.52",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
]
pg = [
    "psycopg[binary]>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v --cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
    "RUF001",  # 中文项目允许字符串中的全角字符
    "RUF002",  # 中文项目允许文档字符串中的全角字符
    "RUF003",  # 中文项目允许注释中的全角字符
    "B008",    # FastAPI 惯用法：Depends() 等作为默认参数
]
